--- a/cli-components/community-components.json
+++ b/cli-components/community-components.json
@@ -2,5 +2,6 @@
     "aws-greengrass-labs-database-influxdb": "https://github.com/awslabs/aws-greengrass-labs-database-influxdb/archive/refs/heads/main.zip",
     "aws-greengrass-labs-telemetry-influxdbpublisher": "https://github.com/awslabs/aws-greengrass-labs-telemetry-influxdbpublisher/archive/refs/heads/main.zip",
     "aws-greengrass-labs-dashboard-grafana": "https://github.com/awslabs/aws-greengrass-labs-dashboard-grafana/archive/refs/heads/main.zip",
-    "aws-greengrass-labs-local-web-server": "https://github.com/awslabs/aws-greengrass-labs-local-web-server/archive/refs/heads/main.zip"
+    "aws-greengrass-labs-local-web-server": "https://github.com/awslabs/aws-greengrass-labs-local-web-server/archive/refs/heads/main.zip",
+    "aws-greengrass-labs-lookoutvision-gstreamer": "https://github.com/awslabs/aws-greengrass-labs-lookoutvision-gstreamer/archive/refs/tags/v1.0.0.zip"
 }
