--- a/cli-components/community-components.json
+++ b/cli-components/community-components.json
@@ -15,5 +15,6 @@
     "aws-greengrass-labs-database-postgresql": "https://github.com/awslabs/aws-greengrass-labs-database-postgresql/archive/refs/tags/v1.0.1.zip",
     "aws-greengrass-labs-openthread-border-router": "https://github.com/awslabs/aws-greengrass-labs-openthread-border-router/archive/refs/heads/main.zip",
     "aws-greengrass-labs-certificate-rotator": "https://github.com/awslabs/aws-greengrass-labs-certificate-rotator/archive/refs/heads/main.zip",
-    "aws-greengrass-labs-osi-pi-streaming-data-connector": "https://github.com/awslabs/aws-greengrass-labs-osi-pi-streaming-data-connector/archive/refs/heads/main.zip"
+    "aws-greengrass-labs-osi-pi-streaming-data-connector": "https://github.com/awslabs/aws-greengrass-labs-osi-pi-streaming-data-connector/archive/refs/heads/main.zip",
+    "aws-greengrass-labs-s3-file-downloader": "https://github.com/awslabs/aws-greengrass-labs-s3-file-downloader/archive/refs/tags/v1.0.0.zip"
 }
